syntax = "proto3";

package protos;


message Tx {
    bytes Tx = 1;
    uint64 Caller = 2;
}

message None {

}

service BlockChain {
    rpc AddTx(Tx) returns (None){}
}
